import org.gradle.api.tasks.compile.JavaCompile
import org.gradle.api.tasks.testing.Test

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.palantir.git-version' version '0.12.3'
}

group 'net.transgressoft'
version gitVersion()

repositories {
    mavenCentral()
    maven {
        url "http://nexus.pipon.xxx/repository/maven-public/"
    }
}

dependencies {
    implementation 'com.google.guava:guava:30.1.1-jre'

    compile 'com.neovisionaries:nv-i18n:1.28'
    compile 'net.jthink:jaudiotagger:2.2.6'
    compile 'org.apache.commons:commons-io:1.3.2'
    compile 'org.apache.commons:commons-text:1.9'
    compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
    compile 'be.tarsos:transcoder:1.2'

    testCompile 'ch.qos.logback:logback-core:1.3.0-alpha5'
    testRuntime 'ch.qos.logback:logback-classic:1.3.0-alpha5'

    testCompile 'org.mockito:mockito-core:3.11.2'
    testImplementation(platform('org.junit:junit-bom:5.7.0'))
    testImplementation('org.junit.jupiter:junit-jupiter')
}

compileJava   {
    sourceCompatibility = 15
    targetCompatibility = 15
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier = "sources"
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId group
            artifactId 'music-commons'
            version version

            from components.java
            artifact sourceJar

            pom {
                name = "music-commons"
                description = "Transgressoft's library for music related projects"
                licenses {
                    license {
                        name = "GNU General Public License v3"
                        url = "https://www.gnu.org/licenses/gpl-3.0.en.html"
                    }
                }
                developers {
                    developer {
                        id = "octaviospain"
                        name = "Octavio Calleya García"
                        email = "octaviospain@gmail.com"
                    }
                }
            }
        }
    }

    repositories {
        maven {
            credentials {
                username = 'admin'
                password = 'nexus2885mwggyk'
            }

            name = 'pi-repo'
            url = 'http://nexus.pipon.xxx/repository/maven-releases/'
        }
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
